overflow du header fixed
Il y avait un double scroll dans le header causé par un overflow

--- a/src/styles/layout/_global.scss
+++ b/src/styles/layout/_global.scss
@@ -23,6 +23,7 @@ footer {
 
 header {
     height: 70dvh;
+    overflow: hidden;
 }
 
 body {
